--- a/app/src/main/res/layout/fragment_yapilacak_is_detay.xml
+++ b/app/src/main/res/layout/fragment_yapilacak_is_detay.xml
@@ -54,7 +54,7 @@
             android:layout_marginTop="196dp"
             android:layout_marginEnd="32dp"
             android:text="GÜNCELLE"
-            android:onClick="@{() -> yapilacakIsDetayFragment.buttonGuncelle(yapilacakIsNesnesi.yapilicakis_id,editTextYapilacakIsDetay.getText().toString())}"
+            android:onClick="@{() -> yapilacakIsDetayFragment.buttonGuncelle(yapilacakIsNesnesi.yapilacakis_id,editTextYapilacakIsDetay.getText().toString())}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
